[package]
name = "earth"
version = "0.1.0"
description = "EARTH: THE ORBITAL COMPACT — Solana Anchor Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "earth"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token-2022"] }
solana-program = "1.18"

[dev-dependencies]
assert_matches = "1.5"
solana-sdk = "1.18"
